# cvanmf

./: .gitignore  .gitpod.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  entero_process.py  enterosig_sl.py  env.yaml  environment.yml  main.nf  nextflow.config  pyproject.toml  requirements.txt  text.py
.github/workflows/: ci-cd.yml  container.yml
data/: ES5_W.tsv  README.txt
docker/: Dockerfile
docker/nf/: Dockerfile
docs/: CHANGELOG.md  Makefile  cell_example.ipynb  click.rst  conf.py  denovo.ipynb  docker.md  example.ipynb  index.md  install.md  make.bat  nextflow.md  reapply.ipynb  requirements.txt
docs/autoapi_templates/: index.rst
resources/: cva_rank_analysis.ipynb  cva_regu_analysis.ipynb  rank_decomposition.ipynb  stab_rank_analysis.ipynb  test_data.tsv
src/cvanmf/: __init__.py  combine.py  denovo.py  models.py  reapply.py  stability.py
src/cvanmf/data/: NW_ABUNDANCE.tsv  README.txt  __init__.py  utils.py
src/enterosig/: __init__.py  denovo.py  models.py  reapply.py  streamlit.py  text.py  transform.py
tests/: test_combine.py  test_data.py  test_denovo.py  test_models.py  test_reapply.py  test_stability.py  test_transform.py
