[tool.poetry]
name = "cvanmf"
version = "0.4.1"
description = "Bi-cross validation of NMF and signature generation and analysis"
authors = ["Anthony Duncan", "Clémence Frioux", "Falk Hildebrand"]
license = "GNU General Public License v2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.3.2"
click = "^8.1.7"
pandas = "^2.1.4"
plotnine = "^0.13"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
setuptools = "^69.1.1"
scikit-bio = "^0.6.0"
kneed = "^0.8.5"
marsilea = "^0.4.3"
multimethod = "^1.12"
scikit-posthocs = "^0.9.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-click = "^5.1.0"
furo = "^2024.5.6"
python-semantic-release = "^9.8.5"
networkx = "^3.3"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "pip install poetry && poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[tool.poetry.scripts]
reapply = "cvanmf.reapply:cli"
rank_select = "cvanmf.denovo:cli_rank_selection"
regu_select = "cvanmf.denovo:cli_regu_selection"
decompose = "cvanmf.denovo:cli_decompose"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    ]